[package]
name = "opn_onl_backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18", features = ["derive"] }
dotenvy = "0.15"
tower = { version = "0.4", features = ["util", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "limit"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.15"
jsonwebtoken = "9"
rand = "0.8"
thiserror = "1.0"
webauthn-rs = "0.5.3"
once_cell = "1.21.3"
url = "2.5.7"
base64 = "0.22.1"
qrcode = "0.14.1"
image = "0.25.9"
maxminddb = "0.23"
user-agent-parser = "0.3"
urlencoding = "2.1"

# Rate limiting
governor = "0.6"

# WebSocket
tokio-tungstenite = "0.21"
futures = "0.3"
futures-util = "0.3"

# API Documentation
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

# Additional utilities
dashmap = "6"
parking_lot = "0.12"

# Redis cache (optional)
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Email (SMTP)
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }

# S3/R2 Backup (pinned to versions compatible with Rust 1.85)
aws-sdk-s3 = "=1.65.0"
aws-config = "=1.5.10"
flate2 = "1.0"
tar = "0.4"

# Structured logging
tracing-appender = "0.2"

# HTTP client for health checks
reqwest = { version = "0.12", features = ["json"] }

# Regex for HTML parsing
regex = "1.10"

[dev-dependencies]
axum-test = "16"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
mime = "0.3"
